--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
     <title><%=htmlWebpackPlugin.options.title%></title>
 </head>
 <body>
-    <div id="app">33</div>
+    <div id="app" class='test'>33</div>
 </body>
 </html>
